recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:15: error: not found: value lenght
    snowSide(levels-1, lenght/3)
                       ^